[tool.poetry]
name = "xivpiperapi"
version = "0.1.0"
description = ""
authors = ["FernPickler <60300936+PaluMeoi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
